change vectorbase par pinecone

--- a/test.ipynb
+++ b/test.ipynb
@@ -4,7 +4,27 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🖼️ Image: https://langchain-ai.github.io/langgraph/concepts/img/human_in_the_loop/approve-or-reject.png\n",
+      "📝 Caption: Depending on the human's approval or rejection, the graph can proceed with the action or take an alternative path.\n",
+      "\n",
+      "🖼️ Image: https://langchain-ai.github.io/langgraph/concepts/img/human_in_the_loop/edit-graph-state-simple.png\n",
+      "📝 Caption: A human can review and edit the state of the graph. This is useful for correcting mistakes or updating the state with additional information.\n",
+      "\n",
+      "🖼️ Image: https://langchain-ai.github.io/langgraph/concepts/img/human_in_the_loop/tool-call-review.png\n",
+      "📝 Caption: A human can review and edit the output from the LLM before proceeding. This is particularly\n",
+      "critical in applications where the tool calls requested by the LLM may be sensitive or require human oversight.\n",
+      "\n",
+      "🖼️ Image: https://langchain-ai.github.io/langgraph/concepts/img/human_in_the_loop/multi-turn-conversation.png\n",
+      "📝 Caption: Amulti-turn conversationarchitecture where anagentandhuman nodecycle back and forth until the agent decides to hand off the conversation to another agent or another part of the system.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
@@ -34,27 +54,6 @@
     "for item in images_with_captions:\n",
     "    print(f\"🖼️ Image: {item['image_url']}\")\n",
     "    print(f\"📝 Caption: {item['caption']}\\n\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1674 chunks évalués parmi vos RGPH.\n"
-     ]
-    }
-   ],
-   "source": [
-    "from src.simple_rag.load_rgph import load_all_rgph_reports\n",
-    "\n",
-    "docs = load_all_rgph_reports(\"/Users/fatousall/Documents/sun-stats/vos_rapports_rgph\")\n",
-    "print(f\"{len(docs)} chunks évalués parmi vos RGPH.\")\n",
-    "\n"
    ]
   }
  ],
