correct indexation image et table

--- a/tttyd.ipynb
+++ b/tttyd.ipynb
@@ -2,41 +2,138 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Copiez ce code À LA FIN de votre fichier, après le contenu existant\n",
+    "# =============================================================================\n",
+    "\n",
+    "import unicodedata\n",
+    "\n",
+    "# =============================================================================\n",
+    "# CORRECTION ASCII POUR PINECONE IDs\n",
+    "# =============================================================================\n",
+    "\n",
+    "def sanitize_pinecone_id(text: str) -> str:\n",
+    "    \"\"\"\n",
+    "    Convertit un texte en ID valide pour Pinecone (ASCII uniquement).\n",
+    "    \n",
+    "    Résout les erreurs comme:\n",
+    "    - 'visual_table_Tableau_VII-7_Proportion_de_célibataires_définitif_p5_t7'\n",
+    "    - 'visual_chart_Graphique_IV-16_Pourcentage_de_la_déclaration_de_p_p38_i2'\n",
+    "    \n",
+    "    Args:\n",
+    "        text: Texte source pouvant contenir des caractères non-ASCII\n",
+    "        \n",
+    "    Returns:\n",
+    "        ID valide pour Pinecone (ASCII uniquement)\n",
+    "        \n",
+    "    Examples:\n",
+    "        >>> sanitize_pinecone_id(\"visual_table_Tableau_VII-7_Proportion_de_célibataires_définitif_p5_t7\")\n",
+    "        'visual_table_Tableau_VII_7_Proportion_de_celibataires_definitif_p5_t7'\n",
+    "        \n",
+    "        >>> sanitize_pinecone_id(\"visual_chart_Graphique_IV-16_Pourcentage_de_la_déclaration_de_p_p38_i2\")\n",
+    "        'visual_chart_Graphique_IV_16_Pourcentage_de_la_declaration_de_p_p38_i2'\n",
+    "    \"\"\"\n",
+    "    if not text:\n",
+    "        return f\"item_{hash('empty') % 1000000}\"\n",
+    "    \n",
+    "    # 1. Normalisation Unicode (é → e, à → a, ç → c, etc.)\n",
+    "    text = unicodedata.normalize('NFD', text)\n",
+    "    text = ''.join(c for c in text if unicodedata.category(c) != 'Mn')\n",
+    "    \n",
+    "    # 2. Remplacer tous les caractères non-ASCII par underscore\n",
+    "    text = re.sub(r'[^a-zA-Z0-9_-]', '_', text)\n",
+    "    \n",
+    "    # 3. Nettoyer les underscores multiples\n",
+    "    text = re.sub(r'_+', '_', text)\n",
+    "    \n",
+    "    # 4. Supprimer les underscores en début/fin\n",
+    "    text = text.strip('_')\n",
+    "    \n",
+    "    # 5. Limiter la longueur (Pinecone max 512, on prend 80 pour sécurité)\n",
+    "    if len(text) > 80:\n",
+    "        text = text[:80].rstrip('_')\n",
+    "    \n",
+    "    # 6. S'assurer qu'on a quelque chose de valide\n",
+    "    if not text or not text.replace('_', '').replace('-', ''):\n",
+    "        text = f\"item_{hash(str(text)) % 1000000}\"\n",
+    "    \n",
+    "    return text\n",
+    "\n",
+    "\n",
+    "def test_sanitize_pinecone_id():\n",
+    "    \"\"\"Teste la fonction de sanitisation avec des cas réels.\"\"\"\n",
+    "    \n",
+    "    test_cases = [\n",
+    "        # Cas problématiques réels de votre système\n",
+    "        \"visual_table_Tableau_VII-7_Proportion_de_célibataires_définitif_p5_t7\",\n",
+    "        \"visual_chart_Graphique_IV-16_Pourcentage_de_la_déclaration_de_p_p38_i2\",\n",
+    "        \"visual_chart_Graphique_I-10_Évolution_du_rapport_de_masculinité_p27_i1\",\n",
+    "        \n",
+    "        # Autres cas à tester\n",
+    "        \"Chapitre 1- ETAT-STRUCTURE-POPULATION-Rapport-Provisoire-RGPH5_juillet2024_0_p28_i1\",\n",
+    "        \"Graphique_I-11_Pyramide_des_âges_de_la_population_p29_i1\",\n",
+    "        \"Chapitre 4 - FECONDITE-NATALITE-Rapport-Provisoire-RGPH5_juillet2024_0_p25_i2\",\n",
+    "        \n",
+    "        # Cas limites\n",
+    "        \"\",\n",
+    "        \"___---___\",\n",
+    "        \"a\" * 200,  # Trop long\n",
+    "    ]\n",
+    "    \n",
+    "    print(\"🧪 TEST DE SANITISATION PINECONE IDS\")\n",
+    "    print(\"=\" * 80)\n",
+    "    \n",
+    "    for i, test_id in enumerate(test_cases, 1):\n",
+    "        fixed_id = sanitize_pinecone_id(test_id)\n",
+    "        \n",
+    "        print(f\"\\nTest {i}:\")\n",
+    "        print(f\"  Avant  : {test_id}\")\n",
+    "        print(f\"  Après  : {fixed_id}\")\n",
+    "        print(f\"  ASCII  : {fixed_id.isascii()}\")\n",
+    "        print(f\"  Longueur: {len(fixed_id)}\")\n",
+    "        print(f\"  Valide : {'✅' if fixed_id.isascii() and len(fixed_id) <= 80 and fixed_id else '❌'}\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/fatousall/anaconda3/lib/python3.11/site-packages/pandas/core/arrays/masked.py:60: UserWarning: Pandas requires version '1.3.6' or newer of 'bottleneck' (version '1.3.5' currently installed).\n",
-      "  from pandas.core import (\n"
+      "🧪 TEST DE SANITISATION PINECONE IDS\n",
+      "================================================================================\n"
      ]
     },
     {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'Config' from 'index_graph.configuration' (/Users/fatousall/Documents/sun-stats/src/index_graph/configuration.py)",
+     "ename": "NameError",
+     "evalue": "name 're' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mshutil\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msrc\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mindex_graph\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mconfiguration\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m IndexConfiguration\n\u001b[1;32m      6\u001b[0m IndexConfiguration\u001b[38;5;241m.\u001b[39mimages_dir\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m#from .configuration import Config\u001b[39;00m\n",
-      "File \u001b[0;32m~/Documents/sun-stats/src/index_graph/__init__.py:3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;124;03m\"\"\"Index Graph Module.\"\"\"\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mindex_graph\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mgraph\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m graph\n\u001b[1;32m      5\u001b[0m __all__ \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgraph\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n",
-      "File \u001b[0;32m~/Documents/sun-stats/src/index_graph/__init__.py:3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;124;03m\"\"\"Index Graph Module.\"\"\"\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mindex_graph\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mgraph\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m graph\n\u001b[1;32m      5\u001b[0m __all__ \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgraph\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n",
-      "File \u001b[0;32m~/Documents/sun-stats/src/index_graph/graph.py:19\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mindex_graph\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mconfiguration\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m IndexConfiguration\n\u001b[1;32m     18\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mindex_graph\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mstate\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m IndexState, InputState\n\u001b[0;32m---> 19\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mindex_graph\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mimage_indexer\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ImageIndexer\n\u001b[1;32m     20\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mshared\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m retrieval\n\u001b[1;32m     21\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mlanggraph\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mgraph\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m StateGraph, START, END\n",
-      "File \u001b[0;32m~/Documents/sun-stats/src/index_graph/image_indexer.py:9\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpinecone\u001b[39;00m\n\u001b[0;32m----> 9\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mconfiguration\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Config\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mImageIndexer\u001b[39;00m:\n\u001b[1;32m     13\u001b[0m     \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'Config' from 'index_graph.configuration' (/Users/fatousall/Documents/sun-stats/src/index_graph/configuration.py)"
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mtest_sanitize_pinecone_id\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[1], line 82\u001b[0m, in \u001b[0;36mtest_sanitize_pinecone_id\u001b[0;34m()\u001b[0m\n\u001b[1;32m     79\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m=\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m80\u001b[39m)\n\u001b[1;32m     81\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i, test_id \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(test_cases, \u001b[38;5;241m1\u001b[39m):\n\u001b[0;32m---> 82\u001b[0m     fixed_id \u001b[38;5;241m=\u001b[39m \u001b[43msanitize_pinecone_id\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtest_id\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     84\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mTest \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mi\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m:\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     85\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m  Avant  : \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtest_id\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[1], line 39\u001b[0m, in \u001b[0;36msanitize_pinecone_id\u001b[0;34m(text)\u001b[0m\n\u001b[1;32m     36\u001b[0m text \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(c \u001b[38;5;28;01mfor\u001b[39;00m c \u001b[38;5;129;01min\u001b[39;00m text \u001b[38;5;28;01mif\u001b[39;00m unicodedata\u001b[38;5;241m.\u001b[39mcategory(c) \u001b[38;5;241m!=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMn\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     38\u001b[0m \u001b[38;5;66;03m# 2. Remplacer tous les caractères non-ASCII par underscore\u001b[39;00m\n\u001b[0;32m---> 39\u001b[0m text \u001b[38;5;241m=\u001b[39m \u001b[43mre\u001b[49m\u001b[38;5;241m.\u001b[39msub(\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m[^a-zA-Z0-9_-]\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m_\u001b[39m\u001b[38;5;124m'\u001b[39m, text)\n\u001b[1;32m     41\u001b[0m \u001b[38;5;66;03m# 3. Nettoyer les underscores multiples\u001b[39;00m\n\u001b[1;32m     42\u001b[0m text \u001b[38;5;241m=\u001b[39m re\u001b[38;5;241m.\u001b[39msub(\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m_+\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m_\u001b[39m\u001b[38;5;124m'\u001b[39m, text)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 're' is not defined"
      ]
     }
    ],
    "source": [
-    "import os\n",
-    "import shutil\n",
-    "import pandas as pd\n",
-    "from src.index_graph.configuration import IndexConfiguration\n",
-    "\n",
-    "IndexConfiguration.images_dir\n",
-    "#from .configuration import Config\n"
+    "test_sanitize_pinecone_id()"
    ]
   },
   {
